[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/title_screen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/title_screen/title_screen.png" type="Texture" id=2]
[ext_resource path="res://Sounds/MenuButtonHoverSound.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/title_screen/clouds.png" type="Texture" id=4]

[sub_resource type="Curve" id=1]
max_value = 2.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.248276, 1.98182 ), 0.0, 0.0, 0, 0, Vector2( 0.417241, 2 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 sky_color = vec4(0.0, 0.0, 1.0, 1.0);




void fragment() {
	float dist = 1.0 - pow(length(vec2(0.5, 1.0) - UV), 0.4);
	COLOR = dist * sky_color;
	
	if (texture(TEXTURE, UV).g < 0.85) {
		COLOR += vec4(0.0, 0.0, 0.0, 0.0);
	} else {
		COLOR += texture(TEXTURE, UV);
	}
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/sky_color = Plane( 0, 0, 1, 1 )

[sub_resource type="OpenSimplexNoise" id=4]
octaves = 2
period = 4.0
persistence = 1.0
lacunarity = 4.0

[sub_resource type="NoiseTexture" id=5]
width = 1024
height = 600
noise = SubResource( 4 )

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

void vertex() {
	VERTEX.x += sin(TIME) * 5.0;
	VERTEX.y += (1.0 + sin(TIME / 2.0)) * 5.0;
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="CanvasLayer/Control"]
amount = 4
emission_shape = 2
emission_rect_extents = Vector2( 800, 300 )
gravity = Vector2( 0, 0 )
scale_amount = 2.0
scale_amount_curve = SubResource( 1 )

[node name="Sky" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/VBoxContainer2"]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Building" type="TextureRect" parent="CanvasLayer/VBoxContainer2/CenterContainer"]
margin_right = 1024.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 1024, 500 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" type="TextureRect" parent="CanvasLayer/VBoxContainer2/CenterContainer"]
material = SubResource( 7 )
margin_right = 1024.0
margin_bottom = 500.0
grow_horizontal = 2
grow_vertical = 0
rect_min_size = Vector2( 1024, 500 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 114.164
margin_top = 449.627
margin_right = 235.164
margin_bottom = 493.627
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="CanvasLayer/VBoxContainer3"]
margin_right = 121.0
margin_bottom = 20.0
text = "Settingus"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelEditor" type="Button" parent="CanvasLayer/VBoxContainer3"]
margin_top = 24.0
margin_right = 121.0
margin_bottom = 44.0
text = "Levulus Editorius"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer"]
margin_left = 800.978
margin_top = 473.246
margin_right = 888.978
margin_bottom = 493.246
text = "Exitus"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -46.0
margin_right = 44.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 88.0
margin_bottom = 20.0
text = "Play"

[node name="TestLevel" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 24.0
margin_right = 88.0
margin_bottom = 44.0
text = "Test level"

[node name="Timer" type="Timer" parent="."]

[node name="MenuButtonHoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -18.0
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer3/Settings" to="." method="_on_Settings_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer3/Settings" to="." method="_on_Settings_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer3/LevelEditor" to="." method="_on_LevelEditor_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer3/LevelEditor" to="." method="_on_LevelEditor_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="focus_entered" from="CanvasLayer/VBoxContainer/Play" to="." method="_on_Play_focus_entered"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/VBoxContainer/TestLevel" to="." method="_on_TestLevel_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/TestLevel" to="." method="_on_TestLevel_pressed"]
